--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ members = ["services/*", "libs/*"]
 default-members = ["services/*", "libs/*"]
 
 [workspace.dependencies]
-tokio = "1"
+tokio = { version = "1", features = ["full"] }
 hyper = "0.14.27"
