--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde = { version = "1.0.193", features = ["derive"] }
 log = "0.4.20"
 bytes = "1.5.0"
 uuid = { version = "1.6.1", features = ["v4"] }
+thiserror = "1.0.50"
