Move config to separate lib

--- a/services/server/Cargo.toml
+++ b/services/server/Cargo.toml
@@ -19,3 +19,4 @@ uuid.workspace = true
 consensus = { path = "../../libs/consensus" }
 error = { path = "../../libs/error" }
 rpc = { path = "../../libs/rpc" }
+config = { path = "../../libs/config" }
