--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ log = "0.4.20"
 bytes = "1.5.0"
 uuid = { version = "1.6.1", features = ["v4"] }
 thiserror = "1.0.50"
+getset = "0.1.2"
+serde_json = "1.0.108"
