--- a/libs/rpc/Cargo.toml
+++ b/libs/rpc/Cargo.toml
@@ -12,5 +12,11 @@ pretty_env_logger.workspace = true
 log.workspace = true
 http-body-util.workspace = true
 bytes.workspace = true
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+thiserror.workspace = true
+getset.workspace = true
+serde_json.workspace = true
+serde.workspace = true
 
 error = { path = "../../libs/error" }
+config = { path = "../../libs/config" }
