--- a/services/server/config.yml
+++ b/services/server/config.yml
@@ -1,3 +1,7 @@
 port: 8101
-protocol: Http
-domain: localhost
+scheme: Http
+host: localhost
+rpc_clients:
+  - http://localhost:8102
+  - http://localhost:8103
+  
