--- a/services/server/Cargo.toml
+++ b/services/server/Cargo.toml
@@ -20,3 +20,4 @@ consensus = { path = "../../libs/consensus" }
 error = { path = "../../libs/error" }
 rpc = { path = "../../libs/rpc" }
 config = { path = "../../libs/config" }
+storage = { path = "../../libs/storage" }
