Bidirectional link between server and node

--- a/libs/config/Cargo.toml
+++ b/libs/config/Cargo.toml
@@ -10,3 +10,4 @@ serde_yaml.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 clap.workspace = true
+hyper = { workspace = true }
