--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ default-members = ["services/*", "libs/*"]
 
 [workspace.dependencies]
 tokio = { version = "1", features = ["full"] }
-hyper = "1.0.1"
 rand = "0.8.5"
 http-body-util = "0.1.0"
 hyper-util = { version = "0.1.1", features = ["full"] }
@@ -18,3 +17,7 @@ thiserror = "1.0.50"
 getset = "0.1.2"
 serde_json = "1.0.108"
 clap = "4.4.18"
+async-trait = "0.1.77"
+futures-util = "0.3.30"
+axum = "0.7.4"
+reqwest = { version = "0.11", features = ["json"] }
