--- a/libs/config/Cargo.toml
+++ b/libs/config/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "config"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 serde_yaml.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 clap.workspace = true
-hyper = { workspace = true }
+axum.workspace = true
+reqwest.workspace = true
