--- a/libs/rpc/Cargo.toml
+++ b/libs/rpc/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hyper = { workspace = true, features = ["full"] }
+axum.workspace = true
+reqwest.workspace = true
 hyper-util = { workspace = true, features = ["full"] }
 pretty_env_logger.workspace = true
 log.workspace = true
@@ -20,3 +21,4 @@ serde.workspace = true
 
 error = { path = "../../libs/error" }
 config = { path = "../../libs/config" }
+log_entry = { path = "../../libs/log_entry" }
