--- a/libs/consensus/Cargo.toml
+++ b/libs/consensus/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
 name = "consensus"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 tokio.workspace = true
@@ -13,8 +11,10 @@ async-trait.workspace = true
 futures-util.workspace = true
 log.workspace = true
 reqwest.workspace = true
+serde_json.workspace = true
+serde.workspace = true
+thiserror.workspace = true
 
 error = { path = "../error" }
 storage = { path = "../storage" }
-rpc = { path = "../rpc" }
-log_entry = { path = "../../libs/log_entry" }
+log_entry = { path = "../log_entry" }
