--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ async-trait = "0.1.77"
 futures-util = "0.3.30"
 axum = "0.7.4"
 reqwest = { version = "0.11", features = ["json"] }
+once_cell = "1.19.0"
