--- a/libs/consensus/Cargo.toml
+++ b/libs/consensus/Cargo.toml
@@ -14,6 +14,7 @@ reqwest.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 thiserror.workspace = true
+once_cell.workspace = true
 
 error = { path = "../error" }
 storage = { path = "../storage" }
