--- a/libs/storage/Cargo.toml
+++ b/libs/storage/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 error = { path = "../../libs/error" }
 thiserror.workspace = true
 tokio.workspace = true
+serde.workspace = true
+serde_json.workspace = true
