--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,30 +3,38 @@ version: '3.8'
 services:
   instance1:
     image: raft_mingle:latest
+    hostname: raft1
     environment:
       - ID=1
       - PEER_IDS=2,3
       - PORT=8001
       - RPC_CLIENTS_PORTS=8002,8003
     ports:
-      - "8001:8001"
+      - "0.0.0.0:8001:8001"
 
   instance2:
     image: raft_mingle:latest
+    hostname: raft2
     environment:
       - ID=2
       - PEER_IDS=1,3
       - PORT=8002
       - RPC_CLIENTS_PORTS=8001,8003
     ports:
-      - "8002:8002"
+      - "0.0.0.0:8002:8002"
+    depends_on:
+      - instance1
 
   instance3:
     image: raft_mingle:latest
+    hostname: raft3
     environment:
       - ID=3
       - PEER_IDS=1,2
       - PORT=8003
       - RPC_CLIENTS_PORTS=8001,8002
     ports:
-      - "8003:8003"
+      - "0.0.0.0:8003:8003"
+    depends_on:
+      - instance1
+      - instance2
